<resources>
    <string name="app_name">Demo Simple Click</string>
    <string name="Dbutton">Display</string>
    <string name="D">Display what the user enters</string>
    <string name="enter_something">Enter something</string>
    <string name="enabled">Enabled</string>
    <string name="disabled">Disabled</string>
    <string name="male">Male</string>
    <string name="female">Female</string>

</resources>